fix page spacing

--- a/src/css/Shared/page.css
+++ b/src/css/Shared/page.css
@@ -45,5 +45,12 @@ html{
     height: 100%;
     display: flex;
     flex-direction: column;
-    width: 950px;
+    width: 1000px;
+}
+
+.extraInfo{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
